# e_book_sync_library

./: .gitignore  Cargo.toml  README.md
src/: book.rs  bookshelf.rs  config.rs  indexer.rs  lib.rs  main.rs  opt.rs  updater.rs  utility.rs
tests/config/: test_config.yaml  test_config_store.yaml
